<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.SwitchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_name" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_local_address" />

        <EditText
            android:id="@+id/edt_local_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-4dp"
            android:layout_marginRight="-4dp"
            android:layout_marginBottom="10dp"
            android:inputType="textUri" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/switch_save" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/gray_300"
            android:padding="20dp"
            android:text="@string/switch_remove"
            android:textColor="@color/black" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/green_800" />

        <LinearLayout
            android:id="@+id/grp_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/offline"
                app:srcCompat="@drawable/icon_offline"
                app:tint="@color/gray_600" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/device_not_found_or_offline"
                android:textColor="@color/gray_600"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/grp_device_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/power_on_state"
                android:textAlignment="center" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="4dp">

                <RadioGroup
                    android:id="@+id/grp_power_on_state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbt_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_bg_selector"
                        android:button="@null"
                        android:text="@string/off"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@drawable/radio_fg_selector" />

                    <RadioButton
                        android:id="@+id/rbt_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_bg_selector"
                        android:button="@null"
                        android:checked="true"
                        android:text="@string/on"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@drawable/radio_fg_selector" />

                    <RadioButton
                        android:id="@+id/rbt_stay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/radio_bg_selector"
                        android:button="@null"
                        android:text="@string/stay"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@drawable/radio_fg_selector" />

                </RadioGroup>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_id"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ssid"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fw_version"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txt_fw_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/placeholder"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>